Fix HTML overflow bug with overflow x hidden and max-width 100% for both html and body tags

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -9,11 +9,13 @@ $workSans: 'Work Sans', sans-serif !important;
 $poppins: 'Poppins', sans-serif;
 $skew: skewX(-15deg);
 
+html, body {
+    max-width: 100%;
+}
 body { 
     background: $background;
     background-attachment: fixed;
     color: $headerColor;
-    overflow-x: hidden;
     margin: 0px;
 }
 nav {
